bad expiration value when using --batch Creation-Date/Expire-Date
Closed, ResolvedPublic

Assigned To
Authored By
becm
Jan 19 2021, 7:59 PM
Subscribers

Description

Lifetime calculation always uses "now" as reference date.

Wrong lifetime for generated key(s) when an explicit Creation-Date is set for batch operation:

  • "seconds from now" instead of
  • "seconds relative to assigned creation date"

see g10/keygen.c:
proc_parameter_file() handling of parse_expire_string()